--- a/app/src/main/res/layout/card_place_category.xml
+++ b/app/src/main/res/layout/card_place_category.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="0dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_weight="1"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/categoryIcon"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/rounded_corner" />
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_gravity="center"
+        android:background="@drawable/rounded_corner"
+        android:padding="10dp"
+        android:src="@drawable/bank_icon"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/categoryName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:fontFamily="@font/swiggy_font_medium"
-        android:paddingTop="5dp"
-        android:textStyle="bold" />
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="Category"
+        android:textColor="@android:color/black"
+        android:textSize="14sp" />
+
 </LinearLayout>
