--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -160,33 +160,8 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#f1f1f4"
-                android:orientation="vertical"
-                android:paddingStart="30sp"
-                android:paddingTop="70sp"
-                android:paddingEnd="30sp"
-                android:paddingBottom="70sp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/swiggy_font_extrabold"
-                    android:text="@string/app_tagline"
-                    android:textColor="@color/grey"
-                    android:textSize="60sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/swiggy_font_light"
-                    android:text="@string/crafted_by"
-                    android:textColor="@color/grey"
-                    android:textSize="20sp" />
-
-            </LinearLayout>
+            <!--   Footer -->
+            <include layout="@layout/layout_main_footer" />
 
         </LinearLayout>
 
