--- a/app/src/main/res/layout/card_choose_place_category.xml
+++ b/app/src/main/res/layout/card_choose_place_category.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical"
@@ -8,12 +7,12 @@
 
     <ImageView
         android:id="@+id/categoryIcon"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_gravity="center"
-        android:background="@drawable/rounded_corner"
-        android:padding="10dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:src="@drawable/bank_icon"
+        android:background="@drawable/rounded_corner"
+        android:contentDescription="Category Icon"
+        android:padding="10dp"
         android:scaleType="centerCrop" />
 
     <TextView
@@ -24,6 +23,6 @@
         android:gravity="center"
         android:text="Category"
         android:textColor="@android:color/black"
-        android:textSize="14sp" />
+        android:textSize="16sp" />
 
 </LinearLayout>
