--- a/app/src/main/res/layout/fragment_choose_place.xml
+++ b/app/src/main/res/layout/fragment_choose_place.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/chooseQuickPlaceCategoryLayout"
@@ -13,7 +12,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/back_icon"
         android:contentDescription="Back" />
 
@@ -25,8 +24,9 @@
         android:layout_below="@id/backButton"
         android:layout_marginBottom="8dp"
         android:text="Choose Place Category"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textSize="26sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/black" />
 
     <!-- Short Description -->
     <TextView
@@ -34,9 +34,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/heading"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="24dp"
         android:text="Select a category to find nearby places."
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textColor="@android:color/darker_gray" />
 
     <!-- RecyclerView for Category Grid -->
     <androidx.recyclerview.widget.RecyclerView
@@ -45,7 +46,8 @@
         android:layout_height="0dp"
         android:layout_above="@id/doneButton"
         android:layout_below="@id/shortDescription"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:paddingVertical="8dp" />
 
     <!-- Done Button -->
     <Button
@@ -54,11 +56,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="@color/light_grey"
         android:drawablePadding="8dp"
-        android:padding="10dp"
+        android:padding="12dp"
         android:text="Done"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
