--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,9 +8,10 @@
     tools:context=".fragments.HomeFragment">
 
     <!--    Header  -->
-    <include
-        android:id="@+id/rl_header"
-        layout="@layout/layout_header" />
+    <com.example.nearbylocator.view.HeaderView
+        android:id="@+id/header_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <!-- Searchbar -->
     <include
