--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/icon_location"
                 android:layout_width="20sp"
                 android:layout_height="20sp"
                 android:layout_gravity="center"
@@ -22,6 +23,7 @@
                 android:src="@drawable/icon_location" />
 
             <TextView
+                android:id="@+id/city_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -33,6 +35,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:id="@+id/icon_downarrow"
                 android:layout_width="10sp"
                 android:layout_height="10sp"
                 android:layout_gravity="center"
@@ -42,6 +45,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/current_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/swiggy_font_light"
@@ -57,11 +61,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true">
-
-        <!--            <com.google.android.material.card.MaterialCardView-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content">-->
-        <!--        </com.google.android.material.card.MaterialCardView>-->
 
         <ImageView
             android:layout_width="45sp"
