Convert Header compnent layout to custom view

--- a/app/src/main/res/layout/fragment_seeall.xml
+++ b/app/src/main/res/layout/fragment_seeall.xml
@@ -44,7 +44,7 @@
                 <!--    Hedaer  -->
                 <include
                     android:id="@+id/rl_header"
-                    layout="@layout/layout_header" />
+                    layout="@layout/view_header" />
 
             </FrameLayout>
 
