--- a/app/src/main/res/layout/fragment_category_group.xml
+++ b/app/src/main/res/layout/fragment_category_group.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -17,10 +15,12 @@
         android:translationZ="100sp"
         android:visibility="gone">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="65sp"
-            android:src="@drawable/banner1" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Foods &amp; Drinks"
+            android:textStyle="bold"
+            android:textSize="25sp"/>
 
     </LinearLayout>
 
@@ -53,62 +53,10 @@
                 android:layout_height="wrap_content"
                 android:background="#fedbdc">
 
-                <com.google.android.material.card.MaterialCardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10sp"
-                    android:elevation="0dp"
-                    app:cardCornerRadius="8sp"
-                    app:strokeColor="#f1f1f4">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white"
-                        android:padding="10sp">
-
-                        <TextView
-                            android:id="@+id/tv_search"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentStart="true"
-                            android:layout_gravity="center"
-                            android:ellipsize="end"
-                            android:fontFamily="@font/swiggy_font_regular"
-                            android:maxLines="1"
-                            android:text="Search for "
-                            android:textColor="@color/grey"
-                            android:textSize="16sp" />
-
-                        <TextSwitcher
-                            android:id="@+id/textSwitcher"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_toEndOf="@id/tv_search"
-                            android:ellipsize="end"
-                            android:fontFamily="@font/swiggy_font_regular"
-                            android:inAnimation="@anim/text_slide_to_top"
-                            android:outAnimation="@anim/text_slide_from_bottom"
-                            android:textColor="@color/grey" />
-
-                        <ImageView
-                            android:layout_width="20sp"
-                            android:layout_height="20sp"
-                            android:layout_marginEnd="10sp"
-                            android:layout_toStartOf="@id/iv_mic"
-                            android:src="@drawable/icon_search" />
-
-                        <ImageView
-                            android:id="@+id/iv_mic"
-                            android:layout_width="20sp"
-                            android:layout_height="20sp"
-                            android:layout_alignParentEnd="true"
-                            android:src="@drawable/icon_mic" />
-
-                    </RelativeLayout>
-
-                </com.google.android.material.card.MaterialCardView>
+                <!--    Searchbar   -->
+                <include
+                    android:id="@+id/place_searchbar"
+                    layout="@layout/layout_searchbar" />
 
             </LinearLayout>
 
@@ -118,10 +66,12 @@
                 android:layout_height="wrap_content"
                 android:background="#fedbdc">
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="65sp"
-                    android:src="@drawable/banner1" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Foods &amp; Drinks"
+                    android:textStyle="bold"
+                    android:textSize="25sp"/>
 
             </LinearLayout>
 
@@ -164,6 +114,29 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/swiggy_font_extrabold"
                     android:paddingStart="10sp"
+                    android:text="Food &amp; Drinks Categories"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="650sp"
+                    android:src="@drawable/instamart_all" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="20sp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/swiggy_font_extrabold"
+                    android:paddingStart="10sp"
                     android:text="Hot Deals!"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
@@ -187,55 +160,31 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingTop="20sp">
+<!--            Advertisement -->
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical"-->
+<!--                android:paddingTop="20sp">-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/swiggy_font_extrabold"
-                    android:paddingStart="10sp"
-                    android:text="All Categories"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="650sp"
-                    android:src="@drawable/instamart_all" />
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:fontFamily="@font/swiggy_font_extrabold"-->
+<!--                    android:paddingStart="10sp"-->
+<!--                    android:text="Brand with a buzz!"-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:textSize="18sp" />-->
 
 
-            </LinearLayout>
+<!--                <ImageView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="350sp"-->
+<!--                    android:layout_marginTop="15sp"-->
+<!--                    android:src="@drawable/img_brand" />-->
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingTop="20sp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/swiggy_font_extrabold"
-                    android:paddingStart="10sp"
-                    android:text="Brand with a buzz!"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="350sp"
-                    android:layout_marginTop="15sp"
-                    android:src="@drawable/img_brand" />
-
-
-            </LinearLayout>
+<!--            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
