--- a/app/src/main/res/layout/fragment_category_individual.xml
+++ b/app/src/main/res/layout/fragment_category_individual.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.ViewallFragment">
+    tools:context=".fragments.CategoryIndividualFragment">
 
     <ScrollView
         android:id="@+id/sv_dineout"
